@@ -1,3 +1,7 @@
+2008-09-19  Lars Poeschel  <larsi@wh2.tu-dresden.de>
+
+    * include/plf_cache.h: Changed to the general arch-var-plf include scheme.
+
 2008-07-01  Lars Poeschel  <larsi@wh2.tu-dresden.de>
 
     * src/platform.S: Startup routines for remapping the flash during
